# phrasetms-python

./: .gitignore  .gitlab-ci.yml  .travis.yml  README.md  docs.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-app.yml  python-publish.yml  python.yml
.openapi-generator/: FILES  VERSION
docs/: ADMIN.md  ADMINEDIT.md  ADMINRESPONSE.md  AbsoluteTranslationLengthWarningDto.md  AbsoluteTranslationLengthWarningDtoAllOf.md  AbstractAnalyseSettingsDto.md  AbstractConnectorDto.md  AbstractProjectDto.md  AbstractProjectDtoV2.md  AbstractUserCreateDto.md  AbstractUserEditDto.md  AccuracyWeightsDto.md  AddCommentDto.md  AddLqaCommentResultDto.md  AddPlainCommentResultDto.md  AddTargetLangDto.md  AddWorkflowStepsDto.md  AdditionalWorkflowStepApi.md  AdditionalWorkflowStepDto.md  AdditionalWorkflowStepRequestDto.md  AdditionalWorkflowStepV2Dto.md  AdminProjectManager.md  AdminProjectManagerAllOf.md  AdminProjectManagerV2.md  AdminProjectManagerV2AllOf.md  AdobeExperienceManager.md  AdobeExperienceManagerAllOf.md  AmazonS3.md  AmazonS3AllOf.md  AnalyseJobDto.md  AnalyseJobReference.md  AnalyseLanguagePartDto.md  AnalyseLanguagePartReference.md  AnalyseLanguagePartV2Dto.md  AnalyseLanguagePartV3Dto.md  AnalyseRecalculateRequestDto.md  AnalyseRecalculateResponseDto.md  AnalyseReference.md  AnalyseSettingsDto.md  AnalyseV2Dto.md  (+747 more)
docs/models/: ADMIN.md  ADMINEDIT.md  ADMINRESPONSE.md  AbsoluteTranslationLengthWarningDto.md  AbstractAnalyseSettingsDto.md  AbstractConnectorDto.md  AbstractProjectDto.md  AbstractProjectDtoV2.md  AbstractUserCreateDto.md  AbstractUserEditDto.md  AccuracyWeightsDto.md  AddCommentDto.md  AddLqaCommentResultDto.md  AddPlainCommentResultDto.md  AddTargetLangDto.md  AddWorkflowStepsDto.md  AdditionalWorkflowStepDto.md  AdditionalWorkflowStepRequestDto.md  AdditionalWorkflowStepV2Dto.md  AdminProjectManager.md  AdminProjectManagerV2.md  AdobeExperienceManager.md  (+648 more)
openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py  schemas.py
phrasetms_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py  utils.py
test/: test_absolute_translation_length_warning_dto.py  test_absolute_translation_length_warning_dto_all_of.py  test_abstract_analyse_settings_dto.py  test_abstract_connector_dto.py  test_abstract_project_dto.py  test_abstract_project_dto_v2.py  test_abstract_user_create_dto.py  test_abstract_user_edit_dto.py  test_accuracy_weights_dto.py  test_add_comment_dto.py  test_add_lqa_comment_result_dto.py  test_add_plain_comment_result_dto.py  test_add_target_lang_dto.py  test_add_workflow_steps_dto.py  test_additional_workflow_step_api.py  test_additional_workflow_step_dto.py  test_additional_workflow_step_request_dto.py  test_additional_workflow_step_v2_dto.py  test_admin.py  test_admin_project_manager.py  test_admin_project_manager_all_of.py  test_admin_project_manager_v2.py  test_admin_project_manager_v2_all_of.py  test_adminedit.py  test_adminresponse.py  test_adobe_experience_manager.py  test_adobe_experience_manager_all_of.py  test_amazon_s3.py  test_amazon_s3_all_of.py  test_analyse_job_dto.py  test_analyse_job_reference.py  test_analyse_language_part_dto.py  test_analyse_language_part_reference.py  test_analyse_language_part_v2_dto.py  test_analyse_language_part_v3_dto.py  test_analyse_recalculate_request_dto.py  test_analyse_recalculate_response_dto.py  test_analyse_reference.py  test_analyse_settings_dto.py  test_analyse_v2_dto.py  (+747 more)
(+4401 files in other folders)
