[tool.poetry]
name = "phrasetms_client"
version = "0.3.10"
description = "Phrase TMS API"
authors = ["Martin Chrástek"]
license = "NoLicense"
readme = "README.md"
repository = "https://github.com/Martin005/phrasetms-python"
keywords = ["OpenAPI", "OpenAPI-Generator", "Phrase TMS API"]

[tool.poetry.dependencies]
python = "^3.7"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = "^1.10.5, <2"
aenum = ">=3.1.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
