[tool.poetry]
name = "phrasetms_client"
version = "1.0.0"
description = "Phrase TMS API"
authors = ["Martin Chrástek"]
license = "LGPL-3.0"
readme = "README.md"
homepage = "https://github.com/Martin005/phrasetms-python"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
repository = "https://github.com/Martin005/phrasetms-python"
keywords = ["Phrase TMS API", "Phrase TMS"]

[tool.poetry.dependencies]
python = "^3.9"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = "^1.10.5, <2"
aenum = ">=3.1.11"

[project]
name = "phrasetms_client"
version = "1.0.0"
description = "Phrase TMS API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "setuptools >= 21.0.0",
    "python-dateutil >= 2.5.3",
    "urllib3 >= 1.25.3",
    "pydantic >= 2.0.0",
]

[dependency-groups]
dev = [
    "pytest >= 7.2.1",
    "tox >= 3.9.0",
    "flake8 >= 4.0.0",
]

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

